# hello

./: .gitattributes  .gitignore  Makefile  Makefile.in  README  README.markdown  configure.ac  hello.c  hello.mk  hello.xml  index.html  zh_CN.po
at91sam9260/: autogen
i386pc/: autogen
mini2440/: autogen
s3c2440/: autogen
